# geneticalgorithm

./: pyproject.toml  test_genetic_algorithm_library_1.py
geneticalgorithm/: asyncgeneticalgorithm.py  geneticalgorithm.py
