[tool.poetry]
name = "geneticalgorithm"
version = "0.1.0"
description = ""
authors = ["Alessandro Lenzi <alessandro.lenzi@onfido.com>"]

[tool.poetry.dependencies]
python = "^3.8"
func-timeout = "^4.3.5"
numpy = "^1.19.4"
matplotlib = "^3.3.3"
tqdm = "^4.51.0"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
